feat(app): added api conbtratcs
